# uni_aizo_p

./: CMakeLists.txt
data/: test.arr
include/: aizo.hpp  aizo_ds.hpp  aizo_ds_dynamicarray.hpp  aizo_measure.hpp  aizo_menu.hpp  aizo_sort.hpp  aizo_sort_heap.hpp  aizo_sort_heap_impl.hpp  aizo_sort_insertion.hpp  aizo_sort_insertion_impl.hpp  aizo_sort_quick.hpp  aizo_sort_quick_impl.hpp  aizo_tool.hpp  aizo_tool_arraygenerator.hpp  aizo_tool_arrayreader.hpp  aizo_tool_reader.hpp  aizo_tool_sort_tester.hpp  aizo_tool_timer.hpp
src/: CMakeLists.txt  main.cpp
